// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover Component should pass additional props to portaled element 1`] = `
<span>
  <div
    class="components-popover"
    role="tooltip"
    style="position: absolute; opacity: 0; transform: translateY(-2em) scale(0) translateZ(0); transform-origin: 0% 0% 0;"
    tabindex="-1"
  >
    <div
      class="components-popover__content"
    >
      Hello
    </div>
  </div>
</span>
`;

exports[`Popover Component should render content 1`] = `
<span>
  <div
    class="components-popover"
    style="position: absolute; opacity: 0; transform: translateY(-2em) scale(0) translateZ(0); transform-origin: 0% 0% 0;"
    tabindex="-1"
  >
    <div
      class="components-popover__content"
    >
      Hello
    </div>
  </div>
</span>
`;
